[package]
name = "anysexpr"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/pflanze/anysexpr"
description = "(Universal) S-Expression parser and formatter"
edition = "2018"
# categories = ["data-formats"] ?
# readme = "README.md"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
kstring = "1.0"
genawaiter = { version = "0.99", default-features = false }
num = "0.4"
utf-8 = "0.7"

[dev-dependencies]
clap = { version = "3.2.23", features = ["derive"] }
